C:/Program Files/Git/

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,5 +33,8 @@
   "popular": "Popular",
   "votePlus": "Vote +",
   "voteMinus": "Vote -",
-  "clear": "Clear"
+  "clear": "Clear",
+  "search": "Search for a movie..."
+
+
 }
