--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -33,5 +33,7 @@
   "popular": "Популярное",
   "votePlus": "Голос +",
   "voteMinus": "Голос -",
-  "clear": "Очистить"
+  "clear": "Очистить",
+  "search": "Поиск фильма..."
+
 }
