--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -33,5 +33,6 @@
   "popular": "Ommabop",
   "votePlus": "Ovoz +",
   "voteMinus": "Ovoz -",
-  "clear": "Tozalash"
+  "clear": "Tozalash",
+  "search": "Film izlash..."
 }
